Reflect realtime and idle priorities in ps(1) state flags, same like we do for the usual nice values.  It could be argued that they should use another set of indicators, since the underlying mechanism is different, but they match the description in the manual page, and so I think it's ok to not overcomplicate things.

PR:		81757
MFC after:	2 weeks
Sponsored by:	DARPA, AFRL


git-svn-id: svn+ssh://svn.freebsd.org/base/head@323225 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f